ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-path: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: test-app
            port: 
              number: 8000
